Finished skeleton layout and code for webapp
Skeleton includes html for various pages, placeholder scripts, and the
start of using Milligram for the css.

--- a/suthsung.html
+++ b/suthsung.html
@@ -15,11 +15,12 @@
   <meta property="og:description" content="A peer-to-peer end-to-end-encrypted fully-featured group chat running entirely client-side." />
   <link rel="shortcut icon" href="images/favicon.ico?v=1" />
   <link rel="icon" href="images/favicon.ico?v=1" />
+  <script src="scripts/libraries/nacl-fast.min.js" charset="utf-8" defer></script>
+  <script src="scripts/libraries/bcrypt.min.js" charset="utf-8" defer></script>
+  <link href="style/milligram.min.css" rel="stylesheet">
+  <link href="style/main.css" rel="stylesheet">
+  <script src="scripts/suthsung.min.js" charset="utf-8" defer></script>
 </head>
-<body>
-
-<h1>My Header</h1>
-<p>Some text</p>
-
+<body id="body">
 </body>
 </html> 
