Added new libraries to header

--- a/suthsung.html
+++ b/suthsung.html
@@ -16,7 +16,9 @@
   <link rel="shortcut icon" href="images/favicon.ico?v=1" />
   <link rel="icon" href="images/favicon.ico?v=1" />
   <script src="scripts/libraries/nacl-fast.min.js" charset="utf-8" defer></script>
+  <script src="scripts/libraries/nacl-util.min.js" charset="utf-8" defer></script>
   <script src="scripts/libraries/bcrypt.min.js" charset="utf-8" defer></script>
+  <script src="scripts/libraries/seedrandom.min.js" charset="utf-8" defer></script>
   <link href="style/milligram.min.css" rel="stylesheet">
   <link href="style/main.css" rel="stylesheet">
   <script src="scripts/suthsung.min.js" charset="utf-8" defer></script>
