Finished first draft of signin page

--- a/html/signin.html
+++ b/html/signin.html
@@ -5,6 +5,13 @@
     <input type="text" placeholder="CatLover108" id="usernameField" required>
     <label for="passwordField">Password</label>
     <input type="password" id="passwordField" required>
-    <input class="button-primary" type="submit" value="Sign in">
+    <label for="sessionField">Session Name</label>
+    <input type="text" placeholder="Android Phone" id="sessionField" required>
+    <input class="button-primary" type="submit" id="signinBtn" value="Sign in">
   </fieldset>
 </form>
+
+<p>
+  <b>WARNING:</b> Choose a unique Username+Password. If it clashes with
+  anyone else in the world, you're fucked @.@
+</p>
