Expanded warning about unique session name

--- a/html/signin.html
+++ b/html/signin.html
@@ -13,5 +13,7 @@
 
 <p>
   <b>WARNING:</b> Choose a unique Username+Password. If it clashes with
-  anyone else in the world, you're fucked @.@
+  anyone else in the world, you're fucked @.@. Additionally, make sure your
+  session name isn't shared by any of your other sessions on your other
+  devices.
 </p>
