Updated nav bar

--- a/suthsung.html
+++ b/suthsung.html
@@ -22,6 +22,20 @@
   <link href="style/main.min.css" rel="stylesheet">
   <script src="scripts/suthsung.min.js" charset="utf-8" defer></script>
 </head>
-<body id="body">
+<body>
+<nav class="navbar">
+  <a href="javascript:void(0);" id="hamburger">
+    ☰
+  </a>
+  <div class="navTitle">Rooms</div>
+  <a href="javascript:void(0);" style="display:none" id="ellipsis">
+    ⋮
+  </a>
+  <a href="javascript:void(0);" style="display:none" id="searchIcon">
+    🔍
+  </a>
+</nav>
+<div id="mainContent">
+</div>
 </body>
 </html> 
