Finished placeholder room list

--- a/html/list.html
+++ b/html/list.html
@@ -1,2 +1,34 @@
-<h1>list.html</h1>
-<h1>UNDER CONSTRUCTIN TODO</h1>
+<!-- Top Navigation Menu -->
+<ul id="roomList" class="simpleList">
+  <li>
+    <a href="?loc=roomsettings&id=null"><img src="/images/favicon.ico" alt="Avatar"></a>
+    <a href="?loc=room&id=null">
+      <div style="float:left;display:inline;">
+        <h3>Pianists</h3>
+        <div class="roomMessage"><div class="speaker">Alice: </div>hello world</div>
+      </div>
+    </a>
+    <div class="roomTime">10:32 PM</div>
+  </li>
+  <li>
+    <a href="?loc=roomsettings&id=null"><img src="/images/favicon.ico" alt="Avatar"></a>
+    <a href="?loc=room&id=null">
+      <div style="float:left;display:inline;">
+        <h3>Gamers</h3>
+        <div class="roomMessage"><div class="speaker">Bob: </div>attention everyone</div>
+      </div>
+    </a>
+    <div class="roomTime">10:32 PM</div>
+  </li>
+  <li>
+    <a href="?loc=roomsettings&id=null"><img src="/images/favicon.ico" alt="Avatar"></a>
+    <a href="?loc=room&id=null">
+      <div style="float:left;display:inline;">
+        <h3>Family</h3>
+        <div class="roomMessage"><div class="speaker">Dad: </div>Are you winning, son? :^)</div>
+      </div>
+    </a>
+    <div class="roomTime">10:32 PM</div>
+  </li>
+</ul>
+<a class="add button" href="?loc=list&test=asdf">New Room</a>
