Made static Join Room and New Room pages

--- a/html/list.html
+++ b/html/list.html
@@ -31,4 +31,5 @@
     <div class="roomTime">10:32 PM</div>
   </li>
 </ul>
-<a class="add button" href="?loc=list&test=asdf">New Room</a>
+<a class="leftBtn button" href="?loc=joinRoom">Join Room</a>
+<a class="rightBtn button" href="?loc=newRoom">Create Room</a>
