Finished starter template for rooms

--- a/html/list.html
+++ b/html/list.html
@@ -1,35 +1,48 @@
 <!-- Top Navigation Menu -->
-<ul id="roomList" class="simpleList">
-  <li>
-    <a href="?loc=roomsettings&id=null"><img src="/images/favicon.ico" alt="Avatar"></a>
-    <a href="?loc=room&id=null">
-      <div style="float:left;display:inline;">
-        <h3>Pianists</h3>
-        <div class="roomMessage"><div class="speaker">Alice: </div>hello world</div>
-      </div>
+<div class="myRow">
+  <div class="roomContainer">
+    <a href="?loc=roomsettings&id=null">
+      <img src="/images/favicon.ico" alt="RoomName">
     </a>
-    <div class="roomTime">10:32 PM</div>
-  </li>
-  <li>
-    <a href="?loc=roomsettings&id=null"><img src="/images/favicon.ico" alt="Avatar"></a>
-    <a href="?loc=room&id=null">
-      <div style="float:left;display:inline;">
-        <h3>Gamers</h3>
-        <div class="roomMessage"><div class="speaker">Bob: </div>attention everyone</div>
+    <a href="?loc=room&id=null" ><span class="fillContainer"></span></a>
+    <div class="messageWrapper">
+      <h3>Pianists</h3>
+      <div class="roomMessage">
+        <div class="speaker">Alice: </div>hello world
       </div>
-    </a>
+    </div>
     <div class="roomTime">10:32 PM</div>
-  </li>
-  <li>
-    <a href="?loc=roomsettings&id=null"><img src="/images/favicon.ico" alt="Avatar"></a>
-    <a href="?loc=room&id=null">
-      <div style="float:left;display:inline;">
-        <h3>Family</h3>
-        <div class="roomMessage"><div class="speaker">Dad: </div>Are you winning, son? :^)</div>
+  </div>
+</div>
+<div class="myRow">
+  <div class="roomContainer">
+    <a href="?loc=roomsettings&id=null">
+      <img src="/images/favicon.ico" alt="RoomName">
+    </a>
+    <a href="?loc=room&id=null" ><span class="fillContainer"></span></a>
+    <div class="messageWrapper">
+      <h3>Gamers</h3>
+      <div class="roomMessage">
+        <div class="speaker">Bob: </div>I'd like to make an announcement. Shadow the hedgehog is a BITCH ASS MOFO
       </div>
-    </a>
+    </div>
     <div class="roomTime">10:32 PM</div>
-  </li>
-</ul>
+  </div>
+</div>
+<div class="myRow">
+  <div class="roomContainer">
+    <a href="?loc=roomsettings&id=null">
+      <img src="/images/favicon.ico" alt="RoomName">
+    </a>
+    <a href="?loc=room&id=null" ><span class="fillContainer"></span></a>
+    <div class="messageWrapper">
+      <h3>Family</h3>
+      <div class="roomMessage">
+        <div class="speaker">Dad: </div>Are ya winning son?
+      </div>
+    </div>
+    <div class="roomTime">10:32 PM</div>
+  </div>
+</div>
 <a class="leftBtn button" href="?loc=joinRoom">Join Room</a>
 <a class="rightBtn button" href="?loc=newRoom">Create Room</a>
