--- a/suthsung.html
+++ b/suthsung.html
@@ -23,18 +23,21 @@
   <script src="scripts/suthsung.min.js" charset="utf-8" defer></script>
 </head>
 <body>
-<nav class="navbar">
-  <a href="javascript:void(0);" id="hamburger">
-    ☰
-  </a>
-  <div class="navTitle">Rooms</div>
-  <a href="javascript:void(0);" style="display:none" id="ellipsis">
-    ⋮
-  </a>
-  <a href="javascript:void(0);" style="display:none" id="searchIcon">
-    🔍
-  </a>
-</nav>
+  <div id="navBar">
+    <nav>
+      <a href="javascript:void(0);" id="hamburger">
+        ☰
+      </a>
+      <div class="navTitle">Rooms</div>
+      <a href="javascript:void(0);" style="display:none" id="ellipsis">
+        ⋮
+      </a>
+      <a href="javascript:void(0);" style="display:none" id="searchIcon">
+        🔍
+      </a>
+    </nav>
+    <div class="topMargin"></div>
+  </div>
 <div id="mainContent">
 </div>
 </body>
