Added localforagejs and ed2curve libraries

--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
   <link rel="icon" href="images/favicon.ico?v=2" />
   <script src="scripts/libraries/nacl-fast.min.js" charset="utf-8" defer></script>
   <script src="scripts/libraries/nacl-util.min.js" charset="utf-8" defer></script>
+  <script src="scripts/libraries/ed2curve.min.js" charset="utf-8" defer></script>
   <script src="scripts/libraries/bcrypt.min.js" charset="utf-8" defer></script>
   <script src="scripts/libraries/seedrandom.min.js" charset="utf-8" defer></script>
-  <!-- <script src="scripts/libraries/localforage.min.js" charset="utf&#45;8" defer></script> -->
+  <script src="scripts/libraries/localforage.min.js" charset="utf-8" defer></script>
   <link href="style/main.min.css" rel="stylesheet">
   <script src="scripts/suthsung.min.js" charset="utf-8" defer></script>
 </head>
