Changed send button

--- a/html/room.html
+++ b/html/room.html
@@ -107,6 +107,6 @@
 </div>
 <div class="sendBar">
   <input type="text" id="messageField">
-  <button type="button" id="sendBtn">⇒</button>
+  <button type="button" id="sendBtn">➢</button>
   <button type="button" id="fileBtn">📎</button>
 </div>
