--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   <script src="scripts/libraries/bcrypt.min.js" charset="utf-8" defer></script>
   <script src="scripts/libraries/seedrandom.min.js" charset="utf-8" defer></script>
   <script src="scripts/libraries/localforage.min.js" charset="utf-8" defer></script>
+  <script src="scripts/libraries/peerjs.min.js" charset="utf-8" defer></script>
   <link href="style/main.min.css" rel="stylesheet">
   <script src="scripts/suthsung.min.js" charset="utf-8" defer></script>
 </head>
